Sun Feb 12 03:33:18 2006  Tim Janik  <timj@gtk.org>

	* shell/bsescminterp.c: turn on guile debugging mode for script registration,
	so we can retrieve file and line number information for script registration 
	and pass it on to BSE.

	* web/Makefile: build fixes. generate bse-interface, which includes procedure
	and script documentation.

	* web/webmenu.doxi: link/menu fixes.

	* beast-gtk/bstutils.c: docu fixups. 

Thu Feb  2 02:15:58 2006  Tim Janik  <timj@gtk.org>

	* bse/*.[hc]: converted documentation markup to doxer.

	* web/Makefile: build full BSE API docs.

Wed Feb  1 20:01:08 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstutils.[hc]: 
	* beast-gtk/gxk/*.[hc]: converted documentation markup to doxer.

	* web/Makefile: build full GXK API docs.

Wed Feb  1 00:21:38 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkutils.c: converted documentation markup to doxer.

	* web/webframe.doxi: fixed relative URIs.

Tue Jan 31 02:36:17 2006  Tim Janik  <timj@gtk.org>

	* configure.in: generate docs/images/Makefile.

	* docs/Makefile.am: adapt to recent file renames/moves.

	* docs/images/Makefile.am: ship documentation images.

	* web/*.doxi:
	* docs/*.doxi: fixed includes. fixed URIs to be @top_webdir/ relative.

	* web/beastdefs.doxi: provide @top_webdir and @top_styledir macros,
	based on the TOP_WEBDIR definition passed in from Makefile.

	* web/rdocu-template.doxi:
	* web/doxer-docu.doxi:
	* web/Makefile: 
	generate doxer docu. generate GXK source code documentation. 

Mon Jan 30 01:27:17 2006  Tim Janik  <timj@gtk.org>

	* autogen.sh: patch intltool to support .scm internationalization.

	* po/intltool-scm.diff: added diff which allowes intltool to extract
	internationalizable strings from .scm files.

Sun Jan 29 20:04:47 2006  Tim Janik  <timj@gtk.org>

	* web/Makefile: generate html files form ChangeLogs.

	* web/beastdefs.doxi: removed bogus heading aliases.

	* web/overview2003de.doxi: fixed headings.
